--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
       <a href="https://www.lewagon.com" target="_blank" class="btn">My Github</a>
     </div>
 
+    <div class="card-green">
+      <h2>About me👋🏻</h2>
+      <p>I like cycling, making handmade pasta and skiing.🚴🏻‍♀️⛷🍝</p>
+    </div>
+
     <div class="card-white">
       <h2>Follow me</h2>
       <div class="card">
