--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
       <p>Working in digital analytics by day ☀️, learning web development at LeWagon by night🌜</p>
       <a href="https://www.lewagon.com" target="_blank" class="btn">My Github</a>
     </div>
-
     <div class="card-green">
       <h2>About me👋🏻</h2>
-      <p>I like cycling, making handmade pasta and skiing.🚴🏻‍♀️⛷🍝</p>
+      <p>I like cycling, making handmade pasta and skiing.
+      🚴🏻‍♀️⛷🍝</p>
     </div>
-
     <div class="card-white">
       <h2>Follow me</h2>
       <div class="card">
