--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
       <h2>Programmer</h2>
       <p>Working in digital analytics by day ☀️, learning web development at LeWagon by night🌜</p>
       <a href="https://www.lewagon.com" target="_blank" class="btn">My Github</a>
+      <a href="https://www.lewagon.com" target="_blank" class="btn">My Github</a>
     </div>
     <div class="card-green">
-      <h1>About me👋🏻</h1>
+      <h2>About me👋🏻</h2>
       <p>I like cycling, making handmade pasta and skiing.
       🚴🏻‍♀️⛷🍝</p>
     </div>
