--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
       <h2>Programmer</h2>
       <p>Working in digital analytics by day ☀️, learning web development at LeWagon by night🌜</p>
       <a href="https://www.lewagon.com" target="_blank" class="btn">My Github</a>
-      <a href="https://www.lewagon.com" target="_blank" class="btn">My Github</a>
+      <a href="https://www.lewagon.com" target="_blank" class="btn">Follow me</a>
     </div>
+    <a id="Follow me"></a>
     <div class="card-green">
       <h2>About me👋🏻</h2>
-      <p>I like cycling, making handmade pasta and skiing.
-      🚴🏻‍♀️⛷🍝</p>
+      <p>I like cycling, making handmade pasta and skiing.</p>
+      <p>🚴🏻‍♀️⛷🍝</p>
     </div>
     <div class="card-white">
       <h2>Follow me</h2>
