--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <a id="Follow me"></a>
     <div class="card-green">
-      <h2>About me👋🏻</h2>
+      <h2-white>About me👋🏻</h2-white>
       <p>I like cycling, making handmade pasta and skiing.</p>
       <p>🚴🏻‍♀️⛷🍝</p>
     </div>
